force-app/main/default/objects/animalos__Condition__c/animalos__Condition__c.object-meta.xml
<CustomObject>
    <label>Condition</label>
    <nameField>
        <label>Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>