force-app/main/default/objects/animalos__Condition__c/fields/animalos__Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Condition_Type__c</fullName>
    <label>Condition Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Behaviour condition</fullName>
            </value>
            <value>
                <fullName>Disease</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>Injury</fullName>
            </value>
            <value>
                <fullName>Welfare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>