force-app/main/default/objects/animalos__Condition__c/fields/animalos__Consult_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Consult_Type__c</fullName>
    <label>Consult Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>