force-app/main/default/objects/animalos__Condition__c/listViews/animalos__All.listView-meta.xml
<ListView>
    <fullName>animalos__All</fullName>
    <columns>NAME</columns>
    <columns>animalos__Condition_Type__c</columns>
    <columns>animalos__Animal_Type__c</columns>
    <columns>animalos__Consult_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>